manifest.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: tp
  name: api
  labels:
    appName: api
spec:
  containers:
  - name: api
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tp
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  namespace: tp
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tp
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pouetos.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 2222
